--- a/piano.html
+++ b/piano.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="assets/css/styles.css">
-  <script src="assets/js/script.js" defer></script>
+  <script src="assets/js/script.js"></script>
   <title>Piano</title>
 </head>
 <body>
